// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login matches snapshot Login 1`] = `
<div
  className="LoginBody"
>
  <div
    className="LoginBox"
  >
    <div
      className="LoginBox__Cover"
    >
      <Link
        replace={false}
        to="/"
      >
        CODE FUN
      </Link>
      <div
        className="Card"
      >
        <div
          className="Card__top"
        >
          Login
        </div>
        <form
          className="Card__form"
          onSubmit={[Function]}
        >
          <div>
            <span
              className="loginColor"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f007",
                      "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
                    ],
                    "iconName": "user",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="1x"
                spin={false}
                symbol={false}
                title=""
                transform={null}
              />
            </span>
            <input
              name="ID"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <div>
            <span
              className="loginColor"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f084",
                      "M512 176.001C512 273.203 433.202 352 336 352c-11.22 0-22.19-1.062-32.827-3.069l-24.012 27.014A23.999 23.999 0 0 1 261.223 384H224v40c0 13.255-10.745 24-24 24h-40v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-78.059c0-6.365 2.529-12.47 7.029-16.971l161.802-161.802C163.108 213.814 160 195.271 160 176 160 78.798 238.797.001 335.999 0 433.488-.001 512 78.511 512 176.001zM336 128c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48-48 21.49-48 48z",
                    ],
                    "iconName": "key",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="1x"
                spin={false}
                symbol={false}
                title=""
                transform={null}
              />
            </span>
            <input
              name="PassWord"
              onChange={[Function]}
              type="password"
              value=""
            />
          </div>
          <input
            className="Card__submit"
            type="submit"
            value="Login"
          />
        </form>
        <div
          className="urlLink"
        >
          <Link
            replace={false}
            to="/register"
          >
            go to Register
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Login renders Spninner when pending 1`] = `
<div
  className="SpinnerBox"
>
  <spinner />
</div>
`;

exports[`Login renders without crashing Register 1`] = `
<div
  className="LoginBody"
>
  <div
    className="LoginBox"
  >
    <div
      className="LoginBox__Cover"
    >
      <Link
        replace={false}
        to="/"
      >
        CODE FUN
      </Link>
      <div
        className="Card"
      >
        <div
          className="Card__top"
        >
          Register
        </div>
        <form
          className="Card__form"
          onSubmit={[Function]}
        >
          <div>
            <span
              className="loginColor"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f007",
                      "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
                    ],
                    "iconName": "user",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="1x"
                spin={false}
                symbol={false}
                title=""
                transform={null}
              />
            </span>
            <input
              name="ID"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
          <div>
            <span
              className="loginColor"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f084",
                      "M512 176.001C512 273.203 433.202 352 336 352c-11.22 0-22.19-1.062-32.827-3.069l-24.012 27.014A23.999 23.999 0 0 1 261.223 384H224v40c0 13.255-10.745 24-24 24h-40v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-78.059c0-6.365 2.529-12.47 7.029-16.971l161.802-161.802C163.108 213.814 160 195.271 160 176 160 78.798 238.797.001 335.999 0 433.488-.001 512 78.511 512 176.001zM336 128c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48-48 21.49-48 48z",
                    ],
                    "iconName": "key",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="1x"
                spin={false}
                symbol={false}
                title=""
                transform={null}
              />
            </span>
            <input
              name="PassWord"
              onChange={[Function]}
              type="password"
              value=""
            />
          </div>
          <input
            className="Card__submit"
            type="submit"
            value="Register"
          />
        </form>
        <div
          className="urlLink"
        >
          <Link
            replace={false}
            to="/login"
          >
            go to Login
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
